    * list type declaration of params argument not working
      with partype="both" in dc.parfit. This option is
      defunct at the moment.
    * WinBUGS related testing is halted due to registry
      problems on my PC.
    * Windows specific suggested packages removed from dependency
      list due to seamless Linux based testing of 
      forking type parallel features (rsprng, BRugs).

Version 1.5-1, October 18, 2011
    * "[.mcmc.list.dc" addted to extract parts of a fitted object
      and retain its n.clones attribute (no other attributes
      though, e.g. dcdiag, dctable, updated.model).
    * params argument in dc.*fit can take a 2 element
      list. Union of the 2 vectors will be used as
      parameters to monitor (as in jags.fit),
      while the 2nd element of the list is used
      to calculate statistics in dcdiag().
      This way transformations of nodes or
      the deviance monitor won't be used in
      diagnostic tests.

Version 1.5-0, October 17, 2011
    * Major CRAN release with improved parallel features
      (double initialization overhead is removed); 
      with bugfixes from devel versions.
    * The package also has bee extensively tested using 
      Classic BUGS examples (see ChangeLog for dcmle package).

Version 1.4-2, October 16, 2011
    * New function: parallel.inits make use of rjags:::parallelseeds 
      to control RNG settings for initial values in parallel computations.
    * parJagsModel: adapted to initial RNG setup by parallel.inits.
    * jags.parfit: adapted to initial RNG setup by parallel.inits.
    * dc.parfit: adapted to initial RNG setup by parallel.inits
      (partype=both, also partype=parchains via jags.parfit,
      partype=balancing depends on underlying JAGS settings
      as in jags.fit).

Version 1.4-1, September 28, 2011
    * plot.dcdiag: dcdiag colnames from .dcFit were non standard,
      so plot failed to select columns. Now fixed.
    * dc.fit and dc.parfit: got n.chains argument for clean