@@ -15,7 +15,8 @@ jags.parfit(cl, data, params, model, inits = NULL, n.chains = 3, ...)
 }
 \arguments{
   \item{cl}{
-A cluster object created by \code{\link[snow]{makeCluster}}.
+A cluster object created by \code{\link[snow]{makeCluster}}, or
+an integer. It can also be \code{NULL}, see \code{\link{snowWrapper}}.
 }
   \item{data}{
 A named list or environment containing the data. If an environment, \code{data}
